Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/varargs/6569633/T6569633.out
T6569633.java:10:27: compiler.err.varargs.and.old.array.syntax
T6569633.java:12:29: compiler.err.varargs.and.old.array.syntax
2 errors
